kubernetes-configs/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      name: backend
      app: backend
  replicas: 2
  template:
    metadata:
      labels:
        name: backend
        app: backend
    spec:
      containers:
        - name: backend
          image: gitlab.sdu.dk:5050/semester-project-e2022/team-7-media-streaming/media-streaming-backend:latest
          resources:
            requests:
              cpu: '150m'
              memory: '100Mi'
            limits:
              cpu: '300m'
              memory: '200Mi'
          ports:
            - containerPort: 802
              name: backend-http
      imagePullSecrets:
        - name: sdugitlab
