kubernetes-configs/mongoexpress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
spec:
  selector:
    matchLabels:
      name: dbui
  replicas: 2
  template:
    metadata:
      labels:
        name: dbui
    spec:
      containers:
        - name: mongo-express
          image: mongo-express:latest
          ports:
            - containerPort: 8081
              name: dbui-http
          resources:
            limits:
              cpu: "50m"
              memory: "50Mi"
