kubernetes-configs/backendsvc.yaml
kind: Service
apiVersion: v1
metadata:
  name: web-service
spec:
  selector:
    app: backend
  type: NodePort
  ports:
    - name: backend-http
      port: 80
      targetPort: 802
