kubernetes-configs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-team07-ingress
spec:
  tls:
    - hosts:
        - team07.c3.themikkel.dk
      secretName: tls-cert
  rules:
    - host: team07.c3.themikkel.dk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 802
